--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,7 @@ p {
     font-size: 2.5rem;
 }
 
-.nav div.logo a:hover {
-    color: #00E676;
-}
+
 
 .nav div.main_list {
     height: 65px;
@@ -986,7 +984,98 @@ nav.affix ul.navlinks {
 
 
 
+   .contact-info h1 {
+       font-family: "Cormorant Garamond";
+       font-style: italic;
+       font-size: 40px;
+       font-weight: 400;
+       padding-top: 50px;
+       color: #3e3e3e;
+       padding-bottom: 15%;
 
+   }
+
+   .contact-details {
+       display: grid;
+       grid-template-columns: repeat(2, 1fr);
+       padding: 100px 0px 50px 0px;
+   }
+
+   .contact-info {
+       padding: 100px 0px 140px 0px;
+       text-align: center;
+       margin: 0 auto;
+   }
+
+   .time-table {
+       display: flex;
+       flex-wrap: wrap;
+       justify-content: space-between;
+       align-items: center;
+
+   }
+
+   .date {
+       color: #292929;
+       font-weight: 700;
+   }
+
+   .time {
+       color: #8d8d8d;
+   }
+
+   .address-info {
+       color: #8d8d8d;
+
+   }
+
+   .divider {
+       margin: 24px 0px 0px 0px !important;
+       border-top: 1px solid #e5e5e5;
+       height: 24px;
+   }
+
+   .info-table {
+       padding: 0px 100px 0px 100px;
+   }
+
+   .info-table2 {
+       padding-top: 20%;
+   }
+
+   .address-info {
+       padding-bottom: 20px;
+   }
+
+   @media (max-width:990px) {
+       .contact-details {
+           display: grid;
+           grid-template-columns: repeat(1, 1fr);
+
+       }
+
+       .map iframe {
+           width: 100%;
+           height: 600px;
+       }
+
+   }
+
+   @media (max-width:600px) {
+       .contact-details {
+
+
+           padding: 0px 0px 0px 0px;
+       }
+
+       .contact-info {
+           padding: 100px 0px 140px 0px;
+
+       }
+
+
+
+   }
 
 
 
